--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -181,6 +181,7 @@
     <string name="new_comment_channel_name">New Comment</string>
     <string name="storage_link">storage_link</string>
     <string name="submit">submit</string>
+    <string name="splash_screen_made_easy">FIRL</string>
 
 
 </resources>
