--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,12 @@
 <resources>
-    <string name="app_name">Firl</string>
+
+    <string name="app_name">Firl : Dating App</string>
+
+    <string name="google_web_client_id">196433492167-vl2r7i9ciu3jr72oqpqh57l9716h85o4.apps.googleusercontent.com</string>
+    <string name="facebook_app_id">415080662213842</string>
+    <string name="facebook_large_image_url_pattern">https://graph.facebook.com/%1$s/picture?type=large</string>
+    <string name="google_large_image_url_pattern">%1$s?sz=%2$d</string>
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="input_placeholder">Write a message</string>
     <string name="title_activity_teeeeeest">teeeeeest</string>
